# RM_PKA_vision

./: README.md  README_20260223_111725.md
RM_PKA_Version3/src/: extended_kalman_filter.cpp  pnp_solver.cpp
RM_PKA_Version3/src/rm_auto_aim/: CMakeLists.txt  package.xml
RM_PKA_Version3/src/rm_auto_aim/include/: extended_kalman_filter.hpp
RM_PKA_Version3/src/rm_auto_aim/include/detector/: armor_detector_node.hpp  detector.hpp  types.hpp
RM_PKA_Version3/src/rm_auto_aim/include/rm_auto_aim/detector/: pnp_solver.hpp
RM_PKA_Version3/src/rm_auto_aim/include/rm_auto_aim/solver/utils/: trajectory_compensator.hpp
RM_PKA_Version3/src/rm_auto_aim/include/solver/: armor_solver_node.hpp  armor_tracker.hpp
RM_PKA_Version3/src/rm_auto_aim/src/: armor_detector_node.cpp  armor_solver_node.cpp  armor_tracker.cpp  detector.cpp  extended_kalman_filter.cpp
RM_PKA_Version3/src/rm_bringup/: CMakeLists.txt  package.xml
RM_PKA_Version3/src/rm_bringup/config/: launch_params.yaml
RM_PKA_Version3/src/rm_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  camera_driver_params.yaml  serial_driver_params.yaml
RM_PKA_Version3/src/rm_bringup/launch/: bringup.launch.py
RM_PKA_Version3/src/rm_hardware_driver/: CMakeLists.txt  package.xml
RM_PKA_Version3/src/rm_hardware_driver/include/rm_hardware_driver/: camera_driver_node.hpp  fixed_packet.hpp  serial_driver_node.hpp
RM_PKA_Version3/src/rm_hardware_driver/src/: camera_driver_node.cpp  serial_driver_node.cpp
RM_PKA_Version3/src/rm_interfaces/: CMakeLists.txt  package.xml
RM_PKA_Version3/src/rm_interfaces/msg/: Armor.msg  GimbalCmd.msg  SerialReceiveData.msg
RM_PKA_Version3/src/rm_robot_description/: CMakeLists.txt  package.xml
RM_PKA_Version3/src/rm_robot_description/urdf/: rm_gimbal.urdf.xacro
