<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_bringup</name>
  <version>1.0.0</version>
  <description>RoboMaster auto-aim launch and configuration</description>
  <maintainer email="auto-aim@rm.com">auto-aim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rm_auto_aim</exec_depend>
  <exec_depend>rm_hardware_driver</exec_depend>
  <exec_depend>rm_interfaces</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
