<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_hardware_driver</name>
  <version>1.0.0</version>
  <description>RoboMaster hardware drivers: camera and serial communication</description>
  <maintainer email="auto-aim@rm.com">auto-aim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rm_interfaces</depend>

  <build_depend>OpenCV</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
